--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
 
       - save_cache:
           paths:
-            - ~/.gradle
+            - ~/.mvn
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests!
