--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,41 +1,29 @@
-# Java Maven CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-java/ for more details
-#
 version: 2
 jobs:
-  build:
+  maven/test:
     docker:
-      # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo
-
-    environment:
-      # Customize the JVM maximum heap limit
-      MAVEN_OPTS: -Xmx3200m
-
+    - image: circleci/openjdk:8-jdk-node
     steps:
-      - checkout
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "pom.xml" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: mvn dependency:go-offline
-
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: v1-dependencies-{{ checksum "pom.xml" }}
-
-      # run tests!
-      - run: mvn integration-test
+    - checkout
+    - run:
+        name: Generate Cache Checksum
+        command: find . -name 'pom.xml' | sort | xargs cat > /tmp/maven_cache_seed
+    - restore_cache:
+        key: maven-{{ checksum "/tmp/maven_cache_seed" }}
+    - run:
+        name: Install Dependencies
+        command: mvn -DskipTests clean install dependency:resolve-plugins dependency:go-offline
+    - run:
+        name: Run Tests
+        command: mvn verify
+    - save_cache:
+        paths:
+        - ~/.m2
+        key: maven-{{ checksum "/tmp/maven_cache_seed" }}
+    - store_test_results:
+        path: target/surefire-reports
+workflows:
+  maven_test:
+    jobs:
+    - maven/test
+  version: 2
