--- a/..circleci/config.yml
+++ b/..circleci/config.yml
@@ -1,29 +1,47 @@
+# Java Gradle CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-java/ for more details
+#
 version: 2
 jobs:
-  maven/test:
+  build:
     docker:
-      - image: circleci/openjdk:8-jdk-node
+      # specify the version you desire here
+      - image: circleci/openjdk:8-jdk
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
+    working_directory: ~/repo
+
+    environment:
+      # Customize the JVM maximum heap limit
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
+
     steps:
       - checkout
-      - run:
-          name: Generate Cache Checksum
-          command: find . -name 'pom.xml' | sort | xargs cat > /tmp/maven_cache_seed
+
+      # Download and cache dependencies
       - restore_cache:
-          key: maven-{{ checksum "/tmp/maven_cache_seed" }}
+          keys:
+            - v1-dependencies-{{ checksum "pom.xml" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
       - run:
           name: Install Dependencies
           command: mvn -DskipTests clean install dependency:resolve-plugins dependency:go-offline
       - run:
           name: Run Tests
           command: mvn verify
+
       - save_cache:
           paths:
             - ~/.m2
-          key: maven-{{ checksum "/tmp/maven_cache_seed" }}
-      - store_test_results:
-          path: target/surefire-reports
-workflows:
-  maven_test:
-    jobs:
-      - maven/test
-  version: 2
+          key: maven-{{ checksum "pom.xml" }}
+
+      # run tests!
+      - run: mvn test
